fixed righ scroll margin on mobile - added overflow-x:hidden; to body at top of agency.css

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -7,6 +7,7 @@
 
 body {
     height: 100vh;
+    overflow-x:hidden;
 }
 
 body {
@@ -278,12 +279,12 @@ background-color: #{{ site.color.primary }};
 
 header {
     margin-top: 60px;
-    height: 75%;
+    height: 100%;
     text-align: center;
     color: #fff;
     background-attachment: scrolled;
     background-image: url(../img/callofgodbanner.jpg);
-    background-position: 45% 0%;
+    background-position: 50% 0%;
     background-repeat: none;
     -webkit-background-size: cover;
     -moz-background-size: cover;
